--- a/src/app/pages/home/blog/blog.component.css
+++ b/src/app/pages/home/blog/blog.component.css
@@ -1,7 +1,7 @@
 .browser-container {
   position:relative;
   scroll-behavior: smooth;
-  min-height: 80vh;;
+  min-height: 500px;
 }
 
 .arrow {
